@@ -1,10 +1,12 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1348\cocoasubrtf170
+{\rtf1\ansi\ansicpg1252\cocoartf1404\cocoasubrtf460
 {\fonttbl\f0\fswiss\fcharset0 Helvetica;}
 {\colortbl;\red255\green255\blue255;}
 \margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural
+\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
 
 \f0\fs24 \cf0 James Carroll\
 \
 Tap the screen to begin.  Tap to jump, holding down the tap makes him jump higher.\
+The orb multipler will be shown next to the meter distance when you get 5 orbs (orb count is in the top right). \
+The wings are the white things laying down on the platforms. The wings give you 60% gravity for 10 seconds. The teleportation is the white light beam standing on the platforms. There\'92s currently only one forum of teleportation as I couldn\'92t two things that had different colors and still looked like a light beam. This was tested on an iPhone 5 running iOS 9.3.1.\
 }
