@@ -17,6 +17,7 @@ final class DataManager {
   static let kInstance = DataManager()
   static let kInstruct = kPackgeName + ".seenInstructions"
   static let kOrbCount = kPackgeName + ".orbCount"
+  static let kDistanceRan = kPackgeName + ".distanceRan"
   
   private init() {
     
@@ -32,5 +33,13 @@ final class DataManager {
   
   static func setMaxOrbsCollected(orbs: Int) {
     kDefaults.setInteger(orbs, forKey: kOrbCount)
+  }
+  
+  static func getMaxDistanceRan() -> Int {
+    return kDefaults.integerForKey(kDistanceRan)
+  }
+  
+  static func setMaxDistanceRand(distance: Int) {
+    kDefaults.setInteger(distance, forKey: kDistanceRan)
   }
 }
