@@ -20,7 +20,7 @@ final class Play: PlayPause, HUD {
   }
   
   func setHudPosition(frame: CGRect) {
-    self.position = CGPointMake(frame.width / 2 - UIScreen.scaleWidth(0.1), frame.origin.y +
+    self.position = CGPointMake(frame.width / 2 - UIScreen.scaleWidth(0.3), frame.origin.y +
       HudUi.kOffset.top * 2)
   }
   
