@@ -2,6 +2,7 @@ v1.1
 NEW multipler for every 5 orbs collected
 NEW teleport further added in the game safely
 NEW wings give you 60% normal gravity
+NEW Leaderboard via Game Center are now available
 
 v1.0.1
 NEW added support for iPad
